# online-chatroom

./: .env  .gitmodules  README.md  db.txt  diesel.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  connContext.tsx  useConn.ts
frontend/src/pages/: acceptCall.tsx  call.tsx  index.tsx  login.tsx  register.tsx
frontend/src/pages/components/: apiEndpoint.js  chatContent.tsx  contentBox.tsx  inputBox.tsx  messageBox.tsx  searchDropUp.tsx  userButton.tsx
frontend/src/pages/components/styles/: chatContent.js  inputBox.js  searchDropUp.js  userButton.js
frontend/src/pages/styles/: index.js
frontend/src/reduxState/: store.ts  webSocketWebrtcSlice.ts
migrations/2024-07-13-131114_users/: up.sql
server/: Cargo.toml
server/src/: main.rs  models.rs  schema.rs
server/src/handlers/: mod.rs  ws_handler.rs
src/: db.rs  main.rs  models.rs
src/handlers/: mod.rs  ws_handler.rs
