[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
futures-util = "0.3.30"
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
bcrypt = "0.15.1"
rand = "0.8.5"
tower-http = { version = "0.5.2", features = ["cors"] }